--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1,h2,h3{
 }
 a{
     text-decoration: none;
-    color: darkgoldenrod;
+    color: #f4ca16;
 }
 ul{
     list-style: none;
@@ -54,9 +54,10 @@ ul{
     height: 90vh;
     display: flex;
     justify-content: center;
-    background-color: rgb(54, 54, 235);
+    background-color: #ffc40c;
     align-items: center;
     text-align: center;
+    border-bottom: solid black;
 }
 .hero-content h1 {
     font-size: 3rem;
@@ -77,14 +78,17 @@ ul{
 .about-section, .contact-section{
     padding: 4rem 2rem;
     text-align: center;
-    background: cadetblue;
+    background: black;
+    color: #ffc40c;
+    border-top: solid #ffc40c;
+    border-bottom: 5px solid #ffc40c;
 }
 .mb2{
     margin-bottom: 1rem;
 }
 .project-section{
     padding: 4rem 2rem;
-    background-color: aliceblue;
+    background-color: #ffc40c;
     text-align: center;
 }
 .project-ohmmy{
@@ -95,10 +99,11 @@ ul{
     margin: auto;
 }
 .project-card{
-    background-color: cadetblue;
+    background-color: black;
+    color: #ffc40c;
     border: 1px solid #000;
     border-radius: 8px;
-    box-shadow: 0 2px 10px black;
+    box-shadow: 0 2px 10px #00ffff;
     transition: transform 0.3s ease;
 }
 .project-card:hover{
@@ -117,7 +122,8 @@ ul{
 .btn-small{
     display: inline-block;
     padding: .5rem 1rem;
-    background-color: rgb(0, 0, 0);
+    background-color: #00ffff;
+    color: black;
     border-radius: 5px;
     margin-bottom: 1rem;
     transition: background-color 0.3s ease;
